# decNumber.cmake

./: CMakeLists.txt  CMakePresets.json  meson.build  readme.md
.github/workflows/: cmake-multi-platform.yml
